# scattered

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile.in  README.md  configure.sh
benchmarks/: CMakeLists.txt  access_patterns.hpp  benchmark.cpp  benchmark.hpp  cartesian_product.hpp  initializers.hpp  is_fusion_pair.hpp  is_scattered.hpp  operations.hpp  size_sequences.hpp  template.gp  tests.hpp  time_function.hpp  types.hpp  vector_benchmark  vector_benchmark.cpp
cmake/: FindLIBCXX.cmake
ext/catch/: CMakeLists.txt
scattered/: vector.hpp
scattered/detail/: as_fusion_map.hpp  assert.hpp  container_traits.hpp  fusion_swap.hpp  get.hpp  map.hpp  map_mutation.hpp  pair.hpp  returns.hpp  type_list.hpp  unqualified.hpp  vector.hpp  vector_iterator_base.hpp
tests/: CMakeLists.txt  example_test.cpp  map_test.cpp  pair_test.cpp  test_types.hpp  vector_test.cpp
tools/: check_format.sh  cleanup.sh
